# rust-gob

./: Cargo.toml
src/: error.rs  schema.rs
src/de/: mod.rs
src/internal/: gob.rs
src/internal/de/: complex_value.rs  field_value.rs  map_value.rs  seq_value.rs  struct_value.rs  value.rs
src/internal/ser/: mod.rs  serialize_empty.rs  serialize_map.rs  serialize_seq.rs  serialize_struct.rs  serialize_tuple.rs  serialize_variant.rs  serialize_wire_types.rs
src/internal/types/: mod.rs  struct_type.rs
src/ser/: mod.rs  output.rs  serialize_map.rs  serialize_seq.rs  serialize_struct.rs  serialize_struct_variant.rs  serialize_tuple.rs
tests/: de.rs
