[package]
name = "gob"
version = "0.1.0"
edition = "2021"
authors = ["Sam Rijs <srijs@airpost.net>"]
description = "serde support for the gob binary format"
license = "MIT"
readme = "README.md"
repository = "https://github.com/srijs/rust-gob"
documentation = "https://docs.rs/gob"

[dependencies]
byteorder = "1.5.0"
bytes = "0.4.12"
iovec = "0.1.4"
lazy_static = "1.5.0"
owning_ref = "0.3.3"
safemem = "0.3.3"
serde = "1.0.210"
serde_derive = "1.0.210"
serde_schema = { version = "0.0.1", features = ["bytes"] }
serde_schema_derive = "0.0.1"

[dev-dependencies]
bencher = "0.1.5"
serde_bytes = "0.10.5"
partial-io = { version = "0.5.4", features = ["quickcheck1"] }
quickcheck = "1.0.3"

[[bench]]
name = "serialize"
harness = false
